2007-2-14	fabian

	* Fixed a bug that disables the background image setting.
	* Added an option to prompt for test-releases.
	
2007-2-12	fabian

	* Fixed a crash that happens when you toggle between the fullscreen and normal modes.
	* Fixed a "losing char space setting" bug (#1658074).
	* Adding @ as a valid URL character.
	* Enhanced numeric keypad behavior. Enter key on the keypad now works under application mode.

2007-2-10	fabian

	* Fixed a keypad mode problem. Cursor keys should behave better now.
	
2007-2-9	fabian

	* Fixed a bug that causes dead session be left open sometimes (#1653347).
	* Adjusted the full screen mode behavior, so you are less likely to be stuck.
	* Added selectedTextColor into Applescript.
	
2007-2-1	fabian

	* Added a default keyboard profile: xterm(OS X).
	* Fixed a Panther compatibility bug.
	* 0.9.5 release
	
2007-1-30	fabian

	* Fixed loss of settings bug due to full screen mode switchings.
	* Fixed a bug that causes the text under cursor rendered in wrong font.
	* Fixed window level for the preference panel under full screen mode transitions.
	
2007-1-29	fabian

	* Now full screen mode uses the current window settings instead of the settings in address book.
	* Full screen mode will adjust font size if "Font Size Follows Resize" is set.
	* Fixed the scrolling bug when there's no scroller bar.
	
2007-1-26	fabian

	* Windows will have unified look when tabs are set to unified style.
	* Fixed underline color bug (#1640553).
	* Slow down update rate when the terminal window is not the key window.
	
2007-1-25	fabian

	* Added option to send text in custom key-mapping.
	* Added option to disable session-initiated window resize.
	
2007-1-24	fabian

	* Added option to turn off vertical scrollbar.
	* Fixed broken Find.
	* Fixed tab updating glitch.
	* Fixed several full screen related bug/crashes.
	
2007-1-23	fabian

	* Fixed the "report a bug" link in the about panel.
	* Finished full screen support.
	
2007-1-22	fabian
	